# rsr

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yml
commands/: docs.txt
communication/whats_rsr/scripts/: draw_figure.py  run_another.py  run_examples.py
demos/ema_accessible_population/: batch.py  s01_find_refs.ipynb  s01_find_rules.ipynb  s02_cal_probs.ipynb  s03_cal_index.ipynb  s04_plots.ipynb
demos/ema_accessible_population/data/: robustness_indices.json  sys_probs.json
demos/ema_shortest_path/: batch.py  s01_find_refs.ipynb  s01_find_rules.ipynb  s02_cal_probs.ipynb  s03_cal_index.ipynb
demos/ema_shortest_path/post-processing/: cond_sys_probs.json  sys_probs.json
demos/ema_shortest_path/rsr_res/: metrics.json  refs_low_0.json  refs_low_0.pt  refs_low_1.json  refs_low_1.pt  refs_up_1.json  refs_up_1.pt  refs_up_2.json  refs_up_2.pt
demos/ema_shortest_path/tsum_res/: rules_geq_2.json  rules_geq_2.pt  rules_leq_1.json  rules_leq_1.pt
demos/generated_networks/: s00_generate_network.ipynb  s01_find_rules.ipynb  s02_cal_probs.ipynb
demos/process_plant/gas_supply_plant/: _build_s03_notebook.py  _s03_check.py  cascade_fire_matrix.py  s01_find_rules.ipynb  s02_cal_probs.ipynb  (+2 more)
demos/toy_global_k_conn/: s01_find_refs.ipynb  s01_find_rules.ipynb  s02_cal_probs.ipynb
docs/: api.rst  conf.py  index.md  make.bat  requirements.txt  usage.md
rsr/: __init__.py  igraph_sfun.py  rsr.py
rsr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_igraph_sfun.py  test_missing_coverage.py  test_rsr.py  test_utils.py
(+106 files in other folders)
